welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:33: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:39: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:49: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:59: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:30: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.MethodsDogHouse'
	override def run() {
                     ^